# RTMaskConformanceTest

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: VALIDATION.md
docs/validation/: generate_figures.py
src/rtmask_conformance/: __init__.py  _roi_set.py  cli.py  evaluator.py  generate.py  manifest.py  report.py  thresholds.py  verify.py
src/rtmask_conformance/_vendor/: __init__.py  metrics.py
src/rtmask_conformance/_vendor/common/: coords.py  io.py
src/rtmask_conformance/_vendor/groundtruth/: partial_volume.py
src/rtmask_conformance/_vendor/primitives/: base.py  closed_planar.py  closed_planar_xor.py
src/rtmask_conformance/_vendor/refimage/: build_reference_ct.py  uid_hierarchy.py
src/rtmask_conformance/_vendor/rtstruct/: geometric_types.py  pydicom_writer.py
src/rtmask_conformance/data/: README_FOR_TOOL_AUTHOR.md  default_thresholds.yaml
src/rtmask_conformance/tests/: conftest.py  test_conformance.py  test_evaluator_api.py  test_metric_math.py  test_negative.py  test_offset_overlap_e2e.py  test_self_roundtrip.py
tools/: UPSTREAM_VERSION.txt  sync_from_upstream.py
